package getrank;

public abstract class Getränk {
    double Volumen;
}
