package getrank;

public abstract class Spirituose extends Getränk{

    int alkoholgehalt;
}
