package getrank;

public class Tequilla extends Spirituose{

    boolean goldenen;
    boolean silbernen;
}
