@startuml

title __INTERFACEGETRÄNK's Class Diagram__\n

  namespace getrank {
    class getrank.Apfelsaft {
    }
  }
  

  namespace getrank {
    abstract class getrank.Getränk {
    }
  }
  

  namespace getrank {
    class getrank.Kiwisaft {
    }
  }
  

  namespace getrank {
    abstract class getrank.Saft {
    }
  }
  

  namespace getrank {
    interface getrank.Schütteln {
    }
  }
  

  namespace getrank {
    abstract class getrank.Spirituose {
    }
  }
  

  namespace getrank {
    class getrank.Tequilla {
    }
  }
  

  namespace getrank {
    class getrank.Wodka {
    }
  }
  

  getrank.Apfelsaft -up-|> getrank.Saft
  getrank.Kiwisaft -up-|> getrank.Saft
  getrank.Saft -up-|> getrank.Getränk
  getrank.Spirituose -up-|> getrank.Getränk
  getrank.Tequilla -up-|> getrank.Spirituose
  getrank.Wodka -up-|> getrank.Spirituose


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
